# micromc

./: README.md  imgui.ini  meson.build
assets/minecraft/shaders/: mesh.fsh  mesh.vsh
glad/include/glad/: glad.h
glad/src/: glad.c
src/: input.cpp  input.hpp  main.cpp  minecraft.cpp  minecraft.hpp  window.cpp  window.hpp
src/loader/: png.cpp  png.hpp
src/object/: blocktransform.cpp  blocktransform.hpp  entitytransform.cpp  entitytransform.hpp
src/player/: camera.cpp  camera.hpp  player.cpp  player.hpp
src/render/: mesh.cpp  mesh.hpp  opengl.cpp  opengl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/util/: block.hpp  file.hpp  types.hpp
src/world/: block.cpp  block.hpp  blockregistry.cpp  blockregistry.hpp  chunk.cpp  chunk.hpp  generator.cpp  generator.hpp  world.cpp  world.hpp
